# notebook-llm-agents

./: README.md  check_env.py  main.py  notebook_agent_interaction.py  notebook_agent_interaction_selenium.py  pyproject.toml  run_benchmark.py  single_notebook_interaction.py  test_function_calling.py  test_proxy_agent.py  test_router.py
app/: __init__.py  app.py  config_avatar_logos.yaml
data/processed_notebooks/: solved_test_notebook.ipynb  test_notebook.ipynb  test_notebook.md
data/test_notebooks/: NameError_list_of_lists_to_list.ipynb  test_notebook.ipynb  test_notebook_2.ipynb
inference/: notebook_agent_interaction.py  run_benchmark.py  single_notebook_interaction.py  test_manager.py  test_proxy_agent.py
prompts/: example_prompt.txt  fix_error_prompt_custom.yaml  fix_error_prompt_datalore.yaml  generate_error_prompt.yaml
prompts/templates/: llama.yaml
remote_environment/: Dockerfile
remote_environment/test_notebooks/: AttributeError_FeatureSelection_SelectFromModel.ipynb  NameError_iterative_imputer.ipynb
server/: first_server.py  main.py  second_server.py
server/templates/: index.html  output.html
src/: __init__.py
src/agents/: agents.py  base_agent.py  proxy_agent.py
src/benchmark/: base_benchmark.py  solving_benchmark.py
src/manager/: conversation_manager.py
src/preprocessing/: __init__.py  notebook.py  process_notebook.py  selenium_notebook.py
src/prompt/: prompt_template.py
src/router/: proxy_agent.py  router.py
src/tools/: __init__.py  notebook_tools.py
