[tool.poetry]
name = "notebookaiagents"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
grazie-api-gateway-client = "0.0.18"
flask = "^3.0.1"
rpdb = "^0.1.6"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
nbformat = "^5.9.2"
omegaconf = "^2.3.0"

[[tool.poetry.source]]
name = "space-grazie-ml"
url = "https://packages.jetbrains.team/pypi/p/grazi/grazie-ml/simple"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
