[tool.poetry]
name = "notebook-llm-agents"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
grazie-api-gateway-client = "0.0.18"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
nbformat = "^5.9.2"
omegaconf = "^2.3.0"
nbconvert = "^7.15.0"
langchain = "^0.1.5"
nbclient = "^0.9.0"
ipdb = "^0.13.13"
remote-pdb = "^2.1.0"
docker = "^7.0.0"
sdb = "^1.8"
tqdm = "^4.66.2"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
selenium = "^4.17.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "space-grazie-ml"
url = "https://packages.jetbrains.team/pypi/p/grazi/grazie-ml/simple"


[tool.poetry.group.server.dependencies]
pydantic = "^2.6.1"
fastapi = "^0.109.2"
requests = "^2.31.0"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.2.1"
pre-commit = "^3.6.0"


[tool.poetry.group.web.dependencies]
streamlit = "^1.32.0"

[tool.poetry.scripts]
check-env = "check_env:check_env_variables"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
